2008-01-18  Marco Caliari  <marco.caliari@univr.it>

	* dMatrix.cc (Matrix::expm): Correctly perform reverse permutation.
	* CMatrix.cc (ComplexMatrix::expm): Likewise.

2008-01-22  Michael Goffioul  <michael.goffioul@gmail.com>

	* oct-time.cc (octave_base_tim::init): Validate pointer argument;
	this fixes the "localtime(-1)" crash under Windows.

2008-01-18  John W. Eaton  <jwe@octave.org>

	* dMatrix.cc (solve_singularity_warning): New function.
	(Matrix::expm): Pass pointer to solve_singularity_warning to
	Matrix::solve method.  Exit early if Matrix::solve fails.
	Limit sqpow value to avoid overflowing scale factor.
	* CMatrix.cc (solve_singularity_warning): New function.
	(ComplexMatrix::expm): Pass pointer to solve_singularity_warning to
	ComplexMatrix::solve method.  Exit early if ComplexMatrix::solve fails.
	Limit sqpow value to avoid overflowing scale factor.
	From Marco Caliari <marco.caliari@univr.it>.

2008-01-10  Kim Hansen  <kimhanse@gmail.com>

	* Sparse.cc: New tests for slicing of sparse matrices.

2008-01-07  David Bateman  <dbateman@free.fr>

	* Sparse-op-defs.h (SPARSE_ANY_ALL_OP_ROW_CODE): Don't break from
	loop if this test succeeds.

2008-01-03  David Bateman  <dbateman@free.fr>

	* MSparse.cc (SPARSE_A2A2_OP): If first arg is scalar zero, then
	need unary operator on remaining argument
	* Sparse-op-defs.h (SPARSE_SMSM_BIN_OP_1): ditto.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-18  David Bateman  <dbateman@free.fr>

	* Sparse.cc (template <class T> Sparse<T> Sparse<T>::index 
	(idx_vector&, int) const): Fix case indexing of non zero scalar 
	stored as a sparse matrix.
	(template <class T> Sparse<T> Sparse<T>::index (idx_vector&, 
	idx_vector&, int) const): For the non permutated indexing case,
	fix link list calculation and use.

2007-12-17  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::indexN): Correctly handle scalar indexed by
	N-d array.

2007-12-17  David Bateman  <dbateman@free.fr>
